Fix button/card sizes on mobile (#93)

--- a/src/game-views/GameBoard.css
+++ b/src/game-views/GameBoard.css
@@ -71,6 +71,7 @@
 .GameBoard-influence {
     background: #fff;
     flex-shrink: 0;
+    font-size: 0.8em;
     height: 0;
     padding-top: 100%;
     position: relative;
