--- a/src/game-views/controls/PlaceWorkerPrompt.css
+++ b/src/game-views/controls/PlaceWorkerPrompt.css
@@ -40,7 +40,7 @@
 }
 
 .PlaceWorkerPrompt-choiceButton {
-    margin: 6px;
+    margin: .5em;
 }
 
 .PlaceWorkerPrompt-choiceNeedsGrande {
